# nfc-encryppted-auto-pairing-wifi-provisioning

./: .gitmodules
bleNfcApp/: App.js  app.json  package-lock.json  package.json
bleNfcApp/android/: build.gradle  settings.gradle
bleNfcApp/android/app/: _BUCK  build.gradle
bleNfcApp/android/app/src/debug/java/com/blenfcapp/: ReactNativeFlipper.java
bleNfcApp/android/app/src/main/: AndroidManifest.xml
bleNfcApp/android/app/src/main/java/com/blenfcapp/: MainActivity.java  MainApplication.java
bleNfcApp/android/app/src/main/res/values/: strings.xml
bleNfcApp/ios/: Podfile
bleNfcApp/ios/bleNfcApp/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
bleNfcApp/ios/bleNfcApp.xcodeproj/: project.pbxproj
bleNfcApp/ios/bleNfcApp.xcodeproj/xcshareddata/xcschemes/: bleNfcApp.xcscheme
bleNfcApp/ios/bleNfcAppTests/: bleNfcAppTests.m
bleNfcApp/src/: App.js
embeddedSystem/: CMakeLists.txt  README.md  build.sh
embeddedSystem/amazon-freertos-config/: iot_ble_config.h  iot_ble_config_defaults.h
embeddedSystem/amazon-freertos/demos/include/: aws_clientcredential.h  aws_clientcredential_keys.h
embeddedSystem/amazon-freertos/vendors/xilinx/boards/microzed/aws_tests/config_files/: FreeRTOSConfig.h
embeddedSystem/config/: iot_ble_config_defaults.h
embeddedSystem/include/: mqtt_runner.h  nfc_tasks.h  spi_pn532.h  wifi.h
embeddedSystem/keys/: aws_clientcredential.h  aws_clientcredential_keys.h
embeddedSystem/src/: main.c  mqtt_runner.c  nfc_tasks.c  spi_pn532.c  wifi.c
